--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "webpack": "^5.97.1",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "webpack-dev-server": "^5.2.0",
+    
+    "eslint": "^8.0.0"
   },
   "dependencies": {
     
