--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "webpack",
     "dev": "webpack serve"
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
