--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "license": "LGPL2",
   "devDependencies": {
     
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
+    "@babel/core": "^7.26.7",
+    "@babel/preset-env": "^7.26.7",
     "babel-loader": "^9.2.1",
 
     "html-webpack-plugin": "^5.6.3",
@@ -22,13 +22,14 @@
     "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
     "css-loader": "^7.1.2",
+    "file-loader": "^6.2.0",
 
     "webpack": "^5.97.1",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0",
     
-    "eslint": "^8.0.0"
+    "eslint": "^9.19.0"
   },
   "dependencies": {
     
